--- a/index.html
+++ b/index.html
@@ -521,9 +521,9 @@
           <p data-i18n-key="photos.7.caption">Con Andrés Pilar.</p>
         </div>
         <div class="foto">
-          <img src="santiagosegretFOTOS/01_Fotos/con emilio balcarce en el panteón de roma.jpg" alt="Con Emilio Balcarce en el Panteón de Roma" loading="lazy" data-i18n-key="photos.3.alt" data-i18n-attr="alt">
-          <p data-i18n-key="photos.3.caption">Con Emilio Balcarce en el Panteón de Roma.</p>
-        </div>
+          <img src="santiagosegretFOTOS/01_Fotos/BalcarceDiploma_MG_2117.jpg" alt="Balcarce Diploma" loading="lazy" data-i18n-key="photos.15.alt" data-i18n-attr="alt">
+          <p data-i18n-key="photos.15.caption">Emilio Balcarce entregando diploma de la Orquesta Escuela de Tango Emilio Balcarce.</p>
+        </div>        
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/andres y vitillo.jpg" alt="Andrés y Vitillo" loading="lazy" data-i18n-key="photos.4.alt" data-i18n-attr="alt">
           <p data-i18n-key="photos.4.caption">Con Andrés Pilar y Vitillo Ábalos.</p>
@@ -555,7 +555,11 @@
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/con la madre de evgeny kisisn.jpg" alt="Con la madre de Evgeny Kissin" loading="lazy" data-i18n-key="photos.13.alt" data-i18n-attr="alt">
           <p data-i18n-key="photos.13.caption">Con la madre de Evgeny Kissin en la puerta del Teatro Colón.</p>
-        </div>        
+        </div>       
+        <div class="foto">
+          <img src="santiagosegretFOTOS/01_Fotos/con emilio balcarce en el panteón de roma.jpg" alt="Con Emilio Balcarce en el Panteón de Roma" loading="lazy" data-i18n-key="photos.3.alt" data-i18n-attr="alt">
+          <p data-i18n-key="photos.3.caption">Con Emilio Balcarce en el Panteón de Roma.</p>
+        </div> 
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/con louise cole.jpg" alt="Con Louise Cole" loading="lazy" data-i18n-key="photos.15.alt" data-i18n-attr="alt">
           <p data-i18n-key="photos.15.caption">Con Louise Cole.</p>
@@ -569,6 +573,10 @@
           <p data-i18n-key="photos.17.caption">En lo de Rafael Villazón.</p>
         </div>
         <div class="foto">
+          <img src="santiagosegretFOTOS/01_Fotos/quinteto de schissi más bolani.jpg" alt="Quinteto de Schissi y Bollani" loading="lazy" data-i18n-key="photos.22.alt" data-i18n-attr="alt">
+          <p data-i18n-key="photos.22.caption">Quinteto de Schissi con Bollani.</p>
+        </div>     
+        <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/juan y luna.jpg" alt="Juan y Luna" loading="lazy" data-i18n-key="photos.18.alt" data-i18n-attr="alt">
           <p data-i18n-key="photos.18.caption">Con Juan Quintero y Luna Monti.</p>
         </div>
@@ -579,12 +587,7 @@
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/con el mono fontana.jpg" alt="Con el Mono Fontana" loading="lazy" data-i18n-key="photos.20.alt" data-i18n-attr="alt">
           <p data-i18n-key="photos.20.caption">Con el Mono Fontana.</p>
-        </div>
-        <div class="foto">
-          <img src="santiagosegretFOTOS/01_Fotos/quinteto de schissi más bolani.jpg" alt="Quinteto de Schissi y Bollani" loading="lazy" data-i18n-key="photos.22.alt" data-i18n-attr="alt">
-          <p data-i18n-key="photos.22.caption">Quinteto de Schissi con Bollani.</p>
-        </div>       
-      
+        </div>      
         <div class="foto">
           <img src="santiagosegretFOTOS/01_Fotos/palestrini y balta estol.jpg" alt="Palestrini y Balta Estol" loading="lazy" data-i18n-key="photos.21.alt" data-i18n-attr="alt">
           <p data-i18n-key="photos.21.caption">Con Sergio Palestrini y Baltazar Estol.</p>
