--- a/index.html
+++ b/index.html
@@ -207,12 +207,7 @@
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/Fjlj-Iq-C-0" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
             <h4 data-i18n-key="videos.busquedas.3">Fragmento de libro de Bucles.</h4>
-          </div>  
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/-oRJ49h56EY" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.4">Libro de Bucles - Completo</h4>
-          </div>
+          </div>            
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/aadUatZ6gTQ" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
@@ -305,6 +300,8 @@
               allowfullscreen loading="lazy"></iframe>
             <h4 data-i18n-key="videos.dsq.2">Concierto con música de Piazzolla</h4>
           </div>
+                    https://www.youtube.com/embed/ L6onQVOcmng
+          
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/d2APcpOvB80" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
@@ -411,6 +408,12 @@
               </p>
             </div>
             <div class="logro-item">
+              <p class="logro-detalle split-layout" data-i18n-key="bio.now.item3">
+                <span class="logro-text">Maestro particular de bandoneón.</span> <span class="logro-ano">Desde 2007</span>
+              </p>
+            </div>
+            
+            <div class="logro-item">
               <p class="logro-detalle split-layout" data-i18n-key="bio.now.item7">
                 <span class="logro-text">Desarrollador y creador del catálogo de partituras <a href="https://rupulo-ediciones.web.app" target="_blank" rel="noopener noreferrer"><strong>Rúpulo Ediciones</strong></a>.</span> <span class="logro-ano">Desde 2008</span>
               </p>
@@ -438,7 +441,7 @@
               <p class="logro-detalle" data-i18n-key="bio.training.item1">En 2006 completó programa de la <strong>Orquesta Escuela de Tango Emilio Balcarce</strong>, junto a grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda, José Colángelo, Néstor Marconi y el mismo Emilio Balcarce.</p>
             </div>
             <div class="logro-item">
-              <p class="logro-detalle" data-i18n-key="bio.training.item6">A lo largo de su adolescencia y hacia la juventud estudió bandoneón con: <strong>Julio Pane, Mariano "Paya" Cigna, Federico Pereiro y con Carlos Lazzari</strong></p>
+              <p class="logro-detalle" data-i18n-key="bio.training.item6">A lo largo de su adolescencia y hacia la juventud estudió bandoneón con: <strong>Julio Pane, Mariano "Paya" Cigna, Federico Pereiro y Carlos Lazzari</strong></p>
             </div>
             <div class="logro-item">
               <p class="logro-detalle" data-i18n-key="bio.training.item4">De 2013 a 2015 integró la <strong>Orquesta del Tango de la Ciudad de Buenos Aires</strong> dirigida en aquel entonces por Raúl Garello, Néstor Marconi y Carlos Cuacci.</p>
@@ -447,10 +450,10 @@
               <p class="logro-detalle" data-i18n-key="bio.training.item2">Compartió grabaciones y escenarios con Leopoldo Federico, Raúl Garello, Victor Lavallén, Vitillo Ábalos, Hilda Herrera, Stefano Bollani, Susana Rinaldi, Nadia Larcher, Luna Monti, Nathy Peluso, Pablo Estigarribia, Amelita Baltar, Jorge Fandermole, Rafael Villazón, Nacho Vidal, Marcelo Moguilevsky, Hernán Segret, Victor Villadangos, Mariana Rewersky, Guillermo Rubino, Ismael Grossman, Juan Pablo Navarro, Mono Fontana.</p>
             </div>
             <div class="logro-item">
-              <p class="logro-detalle" data-i18n-key="bio.training.item5">Cursó el programa del <strong>CIMAP dirigido por Hilda Herrera</strong>: Creadores e Intérpretes de Música Argentina en Piano.</p>
+              <p class="logro-detalle" data-i18n-key="bio.training.item5">Cursó el programa <strong>CIMAP dirigido por Hilda Herrera</strong>: Creadores e Intérpretes de Música Argentina en Piano.</p>
             </div>
             <div class="logro-item">
-              <p class="logro-detalle" data-i18n-key="bio.training.item7">Viajó a más de 20 países con la Orquesta Escuela de Tango, Diego Schissi Quinteto, trío Patio, la Orquesta de Érica Di Salvo, y otros.</p>
+              <p class="logro-detalle" data-i18n-key="bio.training.item7">Viajó a más de 20 países con la Orquesta Escuela de Tango, Diego Schissi Quinteto, trío Patio, la Orquesta de Érica Di Salvo, entre otros.</p>
             </div>
           </div>
         </div>
