--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           <div class="logros-lista">
             <div class="logro-item">
               <p class="logro-detalle split-layout" data-i18n-key="bio.now.item2">
-                <span class="logro-text">Profesor de bandoneón en el <strong>Conservatorio “Astor Piazzolla”</strong> (CABA).</span> <span class="logro-ano">Desde 2018</span>
+                <span class="logro-text">Profesor de bandoneón en el <strong>Conservatorio Superior de Música de la Ciudad de Buenos Aires “Astor Piazzolla”.</strong></span> <span class="logro-ano">Desde 2018</span>
               </p>
             </div>
             <div class="logro-item">
