--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@
             </div>
             
             <div class="logro-item">
-              <p class="logro-detalle split-layout" data-i18n-key="bio.now.item7">
-                <span class="logro-text">Desarrollador y creador del catálogo de partituras <a href="https://rupulo-ediciones.web.app" target="_blank" rel="noopener noreferrer"><strong>Rúpulo Ediciones</strong></a>.</span> <span class="logro-ano">Desde 2008</span>
+                <p class="logro-detalle split-layout" data-i18n-key="bio.now.item7">
+                <span class="logro-text">Desarrollador y creador del catálogo de partituras <a href="rupulo_en_desarrollo.html" rel="noopener noreferrer"><strong>Rúpulo Ediciones</strong></a>.</span> <span class="logro-ano">Desde 2008</span>
               </p>
             </div>
             <div class="logro-item">
@@ -668,8 +668,10 @@
           
           <div class="rupulo-action">
             <span class="rupulo-label" data-i18n-key="rupulo.visitLabel">Visitar catálogo:</span>
-            <a href="https://rupulo-ediciones.web.app" target="_blank" rel="noopener noreferrer" class="rupulo-btn">
-              https://rupulo-ediciones.web.app
+            <!-- <a href="https://rupulo-ediciones.web.app" target="_blank" rel="noopener noreferrer" class="rupulo-btn">
+              https://rupulo-ediciones.web.app -->
+            <a href="rupulo_en_desarrollo.html" rel="noopener noreferrer" class="rupulo-btn">
+              rupulo-ediciones.web.app — En desarrollo
             </a>
           </div>
         </div>
