--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   
   <!-- Hoja de Estilos (Diseño visual) -->
   <link rel="stylesheet" href="style.css">
+  <!-- Simple favicon (SVG monogram 'SS') -->
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./favicon.svg">
   
   <!-- Metadatos para redes sociales (Cómo se ve al compartir en Facebook/Twitter/WhatsApp) -->
   <meta property="og:type" content="website">
