--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
   <!-- Hoja de Estilos (Diseño visual) -->
   <link rel="stylesheet" href="style.css">
   <!-- Favicons: SVG primary, PNG and ICO fallbacks -->
+  <!-- Prefer SVG favicons for sharp rendering; add sized SVG fallbacks for small sizes -->
   <link rel="icon" href="/favicon/favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="/favicon/favicon-32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/favicon/favicon-32.svg" sizes="32x32" type="image/svg+xml">
+  <link rel="icon" href="/favicon/favicon-16.svg" sizes="16x16" type="image/svg+xml">
+  <link rel="icon" href="/favicon/favicon-48.svg" sizes="48x48" type="image/svg+xml">
+  <!-- keep .ico as a legacy fallback -->
   <link rel="shortcut icon" href="/favicon/favicon.ico">
   
   <!-- Metadatos para redes sociales (Cómo se ve al compartir en Facebook/Twitter/WhatsApp) -->
