--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
   <!-- Hoja de Estilos (Diseño visual) -->
   <link rel="stylesheet" href="style.css">
   <!-- Favicons: PNG primary (preferred for compatibility) and ICO fallback -->
-  <link rel="icon" href="/favicon/favicon-32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="/favicon/favicon-16.png" sizes="16x16" type="image/png">
-  <link rel="icon" href="/favicon/favicon-48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="favicon/favicon-32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="favicon/favicon-16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="favicon/favicon-48.png" sizes="48x48" type="image/png">
   <!-- keep .ico as a legacy fallback -->
-  <link rel="shortcut icon" href="/favicon/favicon.ico">
+  <link rel="shortcut icon" href="favicon/favicon.ico">
 
   <!-- Metadatos para redes sociales (Cómo se ve al compartir en Facebook/Twitter/WhatsApp) -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Santiago Segret - Músico">
   <meta property="og:description" content="Santiago Segret, músico y bandoneonista. Biografía, videos y partituras.">
-  <meta property="og:image" content="/santiagosegretFOTOS/01_Fotos/Federico-Cabarcos-Santiago.jpg">
+  <meta property="og:image" content="santiagosegretFOTOS/01_Fotos/Federico-Cabarcos-Santiago.jpg">
   <meta property="og:url" content="https://santiagosegret.com.ar">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Santiago Segret - Músico">
@@ -499,12 +499,14 @@
             <div class="logro-item">
               <p class="logro-detalle" data-i18n-key="bio.training.item3">En 2019 se gradúa con el título de
                 <strong>Licenciado en Artes Musicales con Orientación en Composición en la UNA (Universidad Nacional de
-                  las Artes)</strong>.</p>
+                  las Artes)</strong>.
+              </p>
             </div>
             <div class="logro-item">
               <p class="logro-detalle" data-i18n-key="bio.training.item1">En 2006 completó programa de la
                 <strong>Orquesta Escuela de Tango Emilio Balcarce</strong>, junto a grandes maestros como Victor
-                Lavallén, Raúl Garello, Lidia Borda, José Colángelo, Néstor Marconi y el mismo Emilio Balcarce.</p>
+                Lavallén, Raúl Garello, Lidia Borda, José Colángelo, Néstor Marconi y el mismo Emilio Balcarce.
+              </p>
             </div>
             <div class="logro-item">
               <p class="logro-detalle" data-i18n-key="bio.training.item6">A lo largo de su adolescencia y hacia la
